working tab and loading